--- a/wa_sources/makefile
+++ b/wa_sources/makefile
@@ -1,3 +1,14 @@
-all:
-	wasm-as hello_world.wast
-	xxd -i hello_world.wasm
+all: hello_world.c
+
+%.wasm: %.wast
+	wat2wasm -o $@ $<
+
+%.wasm.dbg: %.wast
+	wat2wasm -v $< >> $@
+
+%.c: %.wasm %.wasm.dbg
+	xxd -i $< > $@
+	echo "/*" >> $@
+	cat $<.dbg >> $@
+	echo "*/" >> $@
+	cat $@
