Add initial version of primitive lookup table

--- a/local/makefile
+++ b/local/makefile
@@ -1,5 +1,6 @@
 all:
-	g++ -g -x c ../mem.c ../util.c  -x c++ ../WARDuino.cpp  main.cpp -o warduino
+	$(MAKE) -C ../wa_sources
+	g++ -g -x c ../mem.c ../util.c  -x c++ ../WARDuino.cpp ../primitives.cpp main.cpp -o warduino
 
 clean:
 	rm warduino
