update launch configuration for visual studio

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Debug WARDuino",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/local/warduino",
+            "program": "${workspaceFolder}/local/bin/warduino",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
