--- a/benchmarks/makefile
+++ b/benchmarks/makefile
@@ -34,23 +34,22 @@ CXXSOURCES = \
 
 all: warduino
 
+./tak/wast/tak.wasm: ./tak/wast/tak.c
+	$(MAKE) -C tak/wast all
+
 ../%.o : ../%.c
 	$(CC) $(CFLAGS) $(DEBUGFLAGS) -c $<   -o $@
 
-../wa_sources/%.c: ../wa_sources/%.wast
-	$(MAKE) -C ../wa_sources
 
-warduino: $(COBJECTS)  $(CXXSOURCES) ../wa_sources/*.c
+warduino: $(COBJECTS)  $(CXXSOURCES) ./tak/wast/tak.wasm
 	$(MKDIR)
-
 	$(CXX) $(CXXFLAGS) $(DEBUGFLAGS) $(COBJECTS) $(CXXSOURCES) -o $(OUTPUTDIR)$(TARGET)
-
 
 run: 
 	$(OUTPUTDIR)$(TARGET)
 
 .PHONY: clean
 clean:
-	$(MAKE) -C ../wa_sources clean
+	$(MAKE) -C tak/wast clean
 	$(RM) -rf $(OUTPUTDIR)
 	$(RM) $(COBJECTS)
