--- a/benchmarks/tak/wast/makefile
+++ b/benchmarks/tak/wast/makefile
@@ -1,3 +1,6 @@
 all:
 	emcc tak.c -s ONLY_MY_CODE=1 --ignore-dynamic-linking -s WASM=1 -O3 -s NO_FILESYSTEM=1  -o tak.html -s "EXTRA_EXPORTED_RUNTIME_METHODS=['ccall', 'cwrap']"	
 	wasm2wat tak.wasm > tak.wast
+
+clean:
+	rm *.html *.js *.wasm *.wast || true
