Make benchmark script more readable

--- a/benchmarks/makefile
+++ b/benchmarks/makefile
@@ -26,6 +26,8 @@ TARGET    = warduino_benchmark
 CXXSOURCES = \
 	../mem.cpp \
 	../util.cpp \
+	../util_arduino.cpp \
+	../interrupt_operations.cpp \
 	../debug.cpp \
 	../WARDuino.cpp \
 	../primitives.cpp \
