--- a/benchmarks/tasks/makefile
+++ b/benchmarks/tasks/makefile
@@ -1,3 +1,15 @@
-all:
-	make -C tak/wast
-	make -C fib/wast
+all: $(addsuffix /wast/arduino/arduino.ino,tak fib)
+
+
+%/wast/arduino/arduino.ino: %/wast/impl.wasm
+	-mkdir $(@D)
+	(xxd -i $< - | sed 's/[^ ]*_impl_wasm/impl_wasm/'; cat ../arduino.ino.template) > $@
+
+%/wast/impl.wasm:  %/wast/impl.c
+	emcc $< -s ONLY_MY_CODE=1 --ignore-dynamic-linking -s WASM=1 -O3 -s NO_FILESYSTEM=1  -o $@ -s "EXTRA_EXPORTED_RUNTIME_METHODS=['ccall', 'cwrap']"
+
+%/wast/impl.wast: %/wast/impl.wasm
+	wasm2wat -f $< > $@
+
+clean:
+	find -iname "impl.wast" -o -iname "impl.wasm" -o -iname "arduino.ino" -delete
