--- a/library.properties
+++ b/library.properties
@@ -6,4 +6,4 @@ sentence=A library that makes coding a Webserver a breeze.
 paragraph=Supports HTTP1.1 and you can do GET and POST.
 category=Communication
 url=http://example.com/
-architectures=esp8266
+architectures=esp8266,esp32
