Remove unused type

--- a/benchmarks/tasks/makefile
+++ b/benchmarks/tasks/makefile
@@ -9,7 +9,7 @@ all: $(addsuffix /wast/arduino/arduino.ino,$(TASKS)) $(addsuffix /wast/impl.wast
 	(xxd -i $< - | sed 's/[^ ]*_impl_wasm/impl_wasm/'; cat ../arduino.ino.template) > $@
 
 %/wast/impl.wasm:  %/wast/impl.c
-	emcc $< -s ONLY_MY_CODE=1 --ignore-dynamic-linking -s WASM=1 -O3 -s NO_FILESYSTEM=1  -o $@ -s "EXTRA_EXPORTED_RUNTIME_METHODS=['ccall', 'cwrap']"
+	emcc $< -s ONLY_MY_CODE=1 --ignore-dynamic-linking -s WASM=1 -O3 -s NO_FILESYSTEM=1  -o $@
 
 %/wast/impl.wast: %/wast/impl.wasm
 	wasm2wat -f $< > $@
