--- a/benchmarks/tasks/makefile
+++ b/benchmarks/tasks/makefile
@@ -7,7 +7,9 @@ all: $(addsuffix /wast/arduino/arduino.ino,$(TASKS)) $(addsuffix /wast/impl.wast
 
 %/wast/arduino/arduino.ino: %/wast/impl.wasm
 	-mkdir $(@D)
-	(xxd -i $< - | sed 's/[^ ]*_impl_wasm/impl_wasm/'; cat ../arduino.ino.template) > $@
+	xxd -i $< $@
+	sed -i 's/[^ ]*_impl_wasm/impl_wasm/'  $@
+	cat ../arduino.ino.template >> $@
 
 %/c/arduino.ino: %/wast/impl.c ../c.ino.template
 	-mkdir $(@D)
@@ -22,6 +24,7 @@ all: $(addsuffix /wast/arduino/arduino.ino,$(TASKS)) $(addsuffix /wast/impl.wast
 
 %/wast/impl.wasm:  %/wast/impl.c
 	emcc $< -s ONLY_MY_CODE=1 --ignore-dynamic-linking -s WASM=1 -O3 -s NO_FILESYSTEM=1  -o $@
+	cat $@ > /dev/null
 
 %/wast/impl.wast: %/wast/impl.wasm
 	wasm2wat -f $< > $@
