Fill in Library properties

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=WARDuino
-version=1.0.0
-author=Cristian Maglie <c.maglie@example.com>, Pippo Pluto <pippo@example.com>
-maintainer=Cristian Maglie <c.maglie@example.com>
-sentence=A library that makes coding a Webserver a breeze.
-paragraph=Supports HTTP1.1 and you can do GET and POST.
+version=0.9.1
+author=Robbert Gurdeep Singh <Robbert.GurdeepSingh@UGent.be>, Christophe Scholliers <Christophe.Scholliers@UGent.be>
+maintainer=Robbert Gurdeep Singh <Robbert.GurdeepSingh@UGent.be>, Christophe Scholliers <Christophe.Scholliers@UGent.be>
+sentence=A library that enables the use of WebAssembly on Arduino boards with debugging support
+paragraph=
 category=Communication
 url=http://example.com/
 architectures=esp8266,esp32
