--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,6 @@
 name=WARDuino
-version=0.9.1
-author=Robbert Gurdeep Singh <Robbert.GurdeepSingh@UGent.be>, Christophe Scholliers <Christophe.Scholliers@UGent.be>
+version=0.9.2
+author=Robbert Gurdeep Singh <Robbert.GurdeepSingh@UGent.be>, Christophe Scholliers <Christophe.Scholliers@UGent.be>, Joel Martin <github@martintribe.org>
 maintainer=Robbert Gurdeep Singh <Robbert.GurdeepSingh@UGent.be>, Christophe Scholliers <Christophe.Scholliers@UGent.be>
 sentence=A library that enables the use of WebAssembly on Arduino boards with debugging support
 paragraph=
