Add glue code for ts strings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.14)
 project (WARDuino)
 add_compile_options(-g -v -std=c++11  -Wall -Wextra -Wunused)
-set(SOURCE_FILES mem.cpp util.cpp util_arduino.cpp interrupt_operations.cpp debug.cpp WARDuino.cpp primitives.cpp instructions.cpp)
+set(SOURCE_FILES mem.cpp util.cpp util_arduino.cpp interrupt_operations.cpp debug.cpp WARDuino.cpp primitives.cpp instructions.cpp glue.cpp glue.h)
 add_executable(WARDuino demo/run_wa/main.cpp ${SOURCE_FILES})
 
 
