Add get EMU and get demo
Fix demo makefile.

--- a/demo/run_wa/makefile
+++ b/demo/run_wa/makefile
@@ -17,6 +17,7 @@ MKDIR     = mkdir -p $(OUTPUTDIR)
 TARGET    = warduino
 
 CXXSOURCES = \
+	../../glue.cpp \
 	../../mem.cpp \
 	../../util.cpp \
 	../../util_arduino.cpp \
