--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tests/sexpr-parser"]
-	path = tests/sexpr-parser
+	path = tests/integration/sexpr-parser
 	url = git@github.com:benthepoet/c-sexpr-parser.git
