--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -23,8 +23,6 @@ jobs:
         name: Test compile on ${{matrix.board.platform-name }}
         runs-on: ubuntu-latest
         env:
-#           SKETCHES: |
-#               - tests/compilation/arduino
             SKETCHES_REPORTS_PATH: sketches-reports
             SKETCHES_REPORTS_ARTIFACT_NAME: sketches-reports
             LIBRARIES: |
@@ -47,9 +45,8 @@ jobs:
                         # Install ESP32 platform via Boards Manager
                         - name: esp32:esp32
                           source-url: https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
-#                     libraries:
-#                     sketch-paths: |
-#                       - tests/compilation/esp32
+                      sketches: |
+                        - tests/compilation/esp32
 #                   - board:
 #                       platform-name: esp8266:esp8266
 #                     platforms: |
@@ -57,7 +54,6 @@ jobs:
 #                       - name: esp8266:esp8266
 #                         source-url: https://arduino.esp8266.com/stable/package_esp8266com_index.json
 #                         version: 2.5.0
-#                    libraries:
 #                    sketch-paths:
         steps:
             - uses: actions/checkout@v2
@@ -67,12 +63,9 @@ jobs:
                   platforms: ${{ matrix.platforms }}
                   fqbn: ${{ matrix.board.fqbn }}
                   sketch-paths: |
-                      tests/compilation/esp32
-#                     ${{ env.SKETCHES }}
-#                     ${{ matrix.sketch-paths }}
+                      ${{ matrix.sketches }}
                   libraries: |
                       ${{ env.LIBRARIES }}
-#                     ${{ matrix.libraries }}
                   enable-deltas-report: true
                   sketches-report-path: ${{ env.SKETCHES_REPORTS_PATH }}
             - name: Upload sketches report to workflow artifact
