--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -56,6 +56,27 @@ jobs:
                       ${{ matrix.sketches }}
                   libraries: |
                       ${{ env.LIBRARIES }}
+                  enable-deltas-report: true
+                  sketches-report-path: ${{ env.SKETCHES_REPORTS_PATH }}
+            - name: Upload sketches report to workflow artifact
+              uses: actions/upload-artifact@v2
+              with:
+                name: ${{ env.SKETCHES_REPORTS_ARTIFACT_NAME }}
+                path: ${{ env.SKETCHES_REPORTS_PATH }}
+    report:
+        name: Report memory usage of the Arduino sketches
+        needs: test-compile-on-mcus
+        if: ${{ github.event_name == 'pull_request' }}
+        runs-on: ubuntu-latest
+        steps:
+            - name: Download sketches reports artifact
+              uses: actions/download-artifact@v2
+              with:
+                name: ${{ env.SKETCHES_REPORTS_ARTIFACT_NAME }}
+                path: ${{ env.SKETCHES_REPORTS_PATH }}
+            - uses: arduino/report-size-deltas@v1
+              with:
+                sketches-reports-source: ${{ env.SKETCHES_REPORTS_PATH }}
     formatting-check:
         name: Formatting Check
         runs-on: ubuntu-latest
