--- a/benchmarks/c.ino.template
+++ b/benchmarks/c.ino.template
@@ -6,7 +6,7 @@ void __attribute__((optimize("no-unroll-loops"))) loop() {
     delay(1000);
     printf("START\n\n");
     for (int i = 0; i < 10; i++) {
-        main();
+        printf("%d: %u\n", i, bench());
     }
     printf("DONE\n\n");
 }
